--- a/service.yml
+++ b/service.yml
@@ -2,8 +2,7 @@ version: '3.0'
 
 services:
   backend:
-    image: pranshugupta54/backend:latest
-    restart: always
+    image: pranshugupta54/backend:462b41e
     ports:
       - "4001:4001"
     deploy:
